--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <h1>Ejercicio 3 de la semana 1</h1>
@@ -12,3 +12,4 @@
     <h3>UNITEC</h3>
   </body>
 </html>
+
